--- a/task1/index.html
+++ b/task1/index.html
@@ -40,7 +40,7 @@
             <p class="text-[#4B5563] text-[18px] font-normal">Lorem ipsum dolor sit amet consect adipisicing possimus
             </p>
         </div>
-        <div class="grid gap-1 md:grid-cols-2 lg:grid-rows-4">
+        <div class="grid gap-1 md:grid-cols-2 lg:grid-cols-4">
             <div class="bg-[#F5F5F5] rounded-t-m py-8">
                 <h3 class="text-[30px] font-semibold mb-[5px]">8,000+</h3>
                 <p class="text-[#4B5563] text-[14px] font-semibold">Creators on the platform</p>
